--- a/StickyNotesApp/src/deb/control/control
+++ b/StickyNotesApp/src/deb/control/control
@@ -2,6 +2,6 @@ Package: stickynotes
 Version: 1.0
 Section: app
 Priority: optional
-Architecture: amd64
+Architecture: all
 Maintainer: Zubair 
 Description: Helps you manage your task easier
